# sheriapal-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  sheriapal.db
app/: __init__.py  db.py  deps.py  models.py  schemas.py
app/routers/: __init__.py  ai.py  auth.py  docs.py
app/services/: __init__.py  gemini.py  storage.py  vector_store.py
scripts/: create_superadmin.py
tests/: conftest.py  test_ai.py  test_auth.py  test_docs.py
utils/: config.py  crypto.py  jwt.py
